// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField should render correctly 1`] = `
<DocumentFragment>
  .cache-12dnigl {
  width: 100%;
}

.cache-12dnigl div.react-datepicker-wrapper {
  display: block;
}

.cache-12dnigl div.react-datepicker__input-container {
  display: block;
}

.cache-12dnigl div.react-datepicker__triangle {
  display: none;
}

.cache-12dnigl div.react-datepicker__month-container {
  padding: 16px;
}

.cache-12dnigl .react-datepicker-popper {
  z-index: 1000;
}

.cache-12dnigl .calendar {
  font-family: 'Asap';
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.cache-12dnigl .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.cache-12dnigl .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.cache-12dnigl .calendar .react-datepicker__month {
  margin: 0;
}

.cache-12dnigl .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.cache-12dnigl .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.cache-12dnigl .calendar .react-datepicker__day {
  color: #727683;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.cache-12dnigl .calendar .react-datepicker__day--selected {
  color: #521094;
  background-color: #f1eefc;
  border-radius: 100%;
}

.cache-12dnigl .calendar .react-datepicker__day--keyboard-selected {
  color: #521094;
  background-color: #f1eefc;
  border-radius: 100%;
}

.cache-12dnigl .calendar .react-datepicker__day:hover {
  color: #521094;
  border-radius: 100%;
  background-color: #f1eefc;
}

.cache-12dnigl .calendar .react-datepicker__day--disabled {
  color: #ffffff;
}

.cache-12dnigl .calendar .react-datepicker__day--disabled:hover {
  color: #ffffff;
  background-color: transparent;
}

.cache-bjn8wh {
  position: relative;
}

.cache-1u1wsqu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:hover,
.cache-1u1wsqu:focus {
  border-color: #3b1a61;
}

.cache-1u1wsqu:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::-moz-placeholder {
  opacity: 1;
}

.cache-1u1wsqu:-ms-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1y7q7le {
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
  height: 48px;
}

.cache-xqpu2t {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  margin: 0 8px;
  height: 100%;
}

.cache-lj7kap-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

<form
    novalidate=""
  >
    <div
      class="cache-12dnigl e1bm75lk4"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=""
            name="test"
            value=""
          >
            <div>
              <div
                class="cache-bjn8wh el3h3g95"
              >
                <input
                  autocomplete="on"
                  class="cache-1u1wsqu el3h3g92"
                  id="date-input-test"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="cache-1lt3r2p e5hc7t70"
              >
                <div
                  class="cache-xbtm7g el3h3g94"
                />
              </div>
            </div>
            <div
              class="cache-1y7q7le e1bm75lk2"
            >
              <hr
                aria-orientation="vertical"
                class="e1bm75lk5 cache-xqpu2t e1d1zom90"
                role="separator"
              />
              <svg
                class="cache-lj7kap-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`DateField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-12dnigl {
  width: 100%;
}

.cache-12dnigl div.react-datepicker-wrapper {
  display: block;
}

.cache-12dnigl div.react-datepicker__input-container {
  display: block;
}

.cache-12dnigl div.react-datepicker__triangle {
  display: none;
}

.cache-12dnigl div.react-datepicker__month-container {
  padding: 16px;
}

.cache-12dnigl .react-datepicker-popper {
  z-index: 1000;
}

.cache-12dnigl .calendar {
  font-family: 'Asap';
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.cache-12dnigl .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.cache-12dnigl .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.cache-12dnigl .calendar .react-datepicker__month {
  margin: 0;
}

.cache-12dnigl .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.cache-12dnigl .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.cache-12dnigl .calendar .react-datepicker__day {
  color: #727683;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.cache-12dnigl .calendar .react-datepicker__day--selected {
  color: #521094;
  background-color: #f1eefc;
  border-radius: 100%;
}

.cache-12dnigl .calendar .react-datepicker__day--keyboard-selected {
  color: #521094;
  background-color: #f1eefc;
  border-radius: 100%;
}

.cache-12dnigl .calendar .react-datepicker__day:hover {
  color: #521094;
  border-radius: 100%;
  background-color: #f1eefc;
}

.cache-12dnigl .calendar .react-datepicker__day--disabled {
  color: #ffffff;
}

.cache-12dnigl .calendar .react-datepicker__day--disabled:hover {
  color: #ffffff;
  background-color: transparent;
}

.cache-bjn8wh {
  position: relative;
}

.cache-94my69 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-94my69::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69:hover,
.cache-94my69:focus {
  border-color: #3b1a61;
}

.cache-94my69:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-94my69::-webkit-input-placeholder {
  opacity: 1;
}

.cache-94my69::-moz-placeholder {
  opacity: 1;
}

.cache-94my69:-ms-input-placeholder {
  opacity: 1;
}

.cache-94my69::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1y7q7le {
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
  height: 48px;
}

.cache-xqpu2t {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  margin: 0 8px;
  height: 100%;
}

.cache-lj7kap-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

<form
    novalidate=""
  >
    <div
      class="cache-12dnigl e1bm75lk4"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=""
            disabled=""
            name="test"
            value=""
          >
            <div>
              <div
                class="cache-bjn8wh el3h3g95"
              >
                <input
                  autocomplete="on"
                  class="cache-94my69 el3h3g92"
                  disabled=""
                  id="date-input-test"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="cache-1lt3r2p e5hc7t70"
              >
                <div
                  class="cache-xbtm7g el3h3g94"
                />
              </div>
            </div>
            <div
              class="cache-1y7q7le e1bm75lk2"
            >
              <hr
                aria-orientation="vertical"
                class="e1bm75lk5 cache-xqpu2t e1d1zom90"
                role="separator"
              />
              <svg
                class="cache-lj7kap-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`DateField should trigger events 1`] = `
<DocumentFragment>
  .cache-12dnigl {
  width: 100%;
}

.cache-12dnigl div.react-datepicker-wrapper {
  display: block;
}

.cache-12dnigl div.react-datepicker__input-container {
  display: block;
}

.cache-12dnigl div.react-datepicker__triangle {
  display: none;
}

.cache-12dnigl div.react-datepicker__month-container {
  padding: 16px;
}

.cache-12dnigl .react-datepicker-popper {
  z-index: 1000;
}

.cache-12dnigl .calendar {
  font-family: 'Asap';
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.cache-12dnigl .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.cache-12dnigl .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.cache-12dnigl .calendar .react-datepicker__month {
  margin: 0;
}

.cache-12dnigl .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.cache-12dnigl .calendar .react-datepicker__day-name {
  font-family: 'Asap';
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.cache-12dnigl .calendar .react-datepicker__day {
  color: #727683;
  font-size: 16px;
  width: 1.7rem;
  height: 1.7rem;
  margin-left: 3px;
  margin-right: 3px;
}

.cache-12dnigl .calendar .react-datepicker__day--selected {
  color: #521094;
  background-color: #f1eefc;
  border-radius: 100%;
}

.cache-12dnigl .calendar .react-datepicker__day--keyboard-selected {
  color: #521094;
  background-color: #f1eefc;
  border-radius: 100%;
}

.cache-12dnigl .calendar .react-datepicker__day:hover {
  color: #521094;
  border-radius: 100%;
  background-color: #f1eefc;
}

.cache-12dnigl .calendar .react-datepicker__day--disabled {
  color: #ffffff;
}

.cache-12dnigl .calendar .react-datepicker__day--disabled:hover {
  color: #ffffff;
  background-color: transparent;
}

.cache-bjn8wh {
  position: relative;
}

.cache-1u1wsqu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:hover,
.cache-1u1wsqu:focus {
  border-color: #3b1a61;
}

.cache-1u1wsqu:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::-moz-placeholder {
  opacity: 1;
}

.cache-1u1wsqu:-ms-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1y7q7le {
  padding: 8px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  right: 0;
  top: 0;
  height: 48px;
}

.cache-xqpu2t {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  margin: 0 8px;
  height: 100%;
}

.cache-lj7kap-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

<form
    novalidate=""
  >
    <div
      class="cache-12dnigl e1bm75lk4"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=""
            name="test"
            value="08/28/2022"
          >
            <div>
              <div
                class="cache-bjn8wh el3h3g95"
              >
                <input
                  autocomplete="on"
                  class="cache-1u1wsqu el3h3g92"
                  id="date-input-test"
                  type="text"
                  value="8/28/2022"
                />
              </div>
              <div
                class="cache-1lt3r2p e5hc7t70"
              >
                <div
                  class="cache-xbtm7g el3h3g94"
                />
              </div>
            </div>
            <div
              class="cache-1y7q7le e1bm75lk2"
            >
              <hr
                aria-orientation="vertical"
                class="e1bm75lk5 cache-xqpu2t e1d1zom90"
                role="separator"
              />
              <svg
                class="cache-lj7kap-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
